tests/snapshots/compiler_error_fixtures/type_mismatch_argument.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/type_mismatch_argument.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `greet`.

  examples/compiler_errors/type_mismatch_argument.flx:9:25
  |
4 | fn greet(name: String) -> String {
  | -------------------------------- `greet` expects `String` as the 1st parameter
5 |     name
6 | }
7 | 
8 | fn main() -> Unit {
9 |     let ignored = greet(123)
  |                         ^^^
  |                         --- this argument has type `Int`

Note:
  expected argument type: String
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.
== stdout ==
<not executed>
